// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToolTip display prop renders block 1`] = `
<div>
  <span
    class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
  >
    <button>
      Trigger
    </button>
  </span>
</div>
`;

exports[`EuiToolTip is rendered 1`] = `
<body>
  <div>
    <span
      class="euiToolTipAnchor"
    >
      <button>
        Trigger
      </button>
    </span>
  </div>
</body>
`;

exports[`EuiToolTip shows tooltip on mouseover and focus 1`] = `
<body
  class="euiBody-hasPortalContent"
>
  <div>
    <span
      class="euiToolTipAnchor"
    >
      <button
        aria-describedby="id"
        data-test-subj="trigger"
      >
        Trigger
      </button>
    </span>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      aria-label="aria-label"
      class="euiToolTipPopover euiToolTip euiToolTip--top testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      position="top"
      role="tooltip"
      style="top: 50px; left: 50px; opacity: 0; visibility: hidden;"
    >
      <div
        class="euiToolTip__title"
      >
        title
      </div>
      <div
        class="euiToolTip__arrow"
      />
      <div>
        content
      </div>
    </div>
  </div>
</body>
`;
